syntax = "proto3";
option go_package = ".product";

service ProductService {
    rpc CreateProduct (ProductRequest) returns (ProductResponse);
    rpc GetProductID (GetProductRequest) returns (ProductResponse);
    rpc ListProducts (Empty) returns (stream ProductResponse);
}

message ProductRequest {
    string name = 1;
    int32 quantity = 2;
    double price = 3;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    int32 quantity = 3;
    double price = 4;
    string created_at = 5;
}

message GetProductRequest {
    int32 id = 1;
}

message Empty {}
